Rather closer to an initial alpha build ... 89 files now partly/mostly converted

--- a/andengine.net.csproj
+++ b/andengine.net.csproj
@@ -54,11 +54,18 @@
     <Compile Include="audio\BaseAudioEntity.cs" />
     <Compile Include="audio\IAudioManager.cs" />
     <Content Include="audio\BaseAudioManager.cs" />
-    <Content Include="audio\IAudioEntity.cs" />
+    <Compile Include="audio\IAudioEntity.cs" />
     <Compile Include="collision\BaseCollisionChecker.cs" />
     <Compile Include="collision\LineCollisionChecker.cs" />
     <Compile Include="collision\RectangularShapeCollisionChecker.cs" />
     <Compile Include="collision\ShapeCollisionChecker.cs" />
+    <Compile Include="audio\music\Music.cs" />
+    <Compile Include="audio\music\MusicFactory.cs" />
+    <Compile Include="audio\music\MusicManager.cs" />
+    <Compile Include="audio\sound\Sound.cs" />
+    <Compile Include="audio\sound\SoundFactory.cs" />
+    <Compile Include="audio\sound\SoundLibrary.cs" />
+    <Compile Include="audio\sound\SoundManager.cs" />
     <Content Include="engine\camera\BoundCamera.java" />
     <Compile Include="engine\camera\Camera.cs" />
     <Content Include="engine\camera\CameraFactory.java" />
@@ -68,6 +75,11 @@
     <Content Include="engine\FixedStepEngine.java" />
     <Compile Include="engine\handler\IUpdateHandler.cs" />
     <Compile Include="engine\handler\UpdateHandlerList.cs" />
+    <Content Include="engine\handler\collision\CollisionHandler.java" />
+    <Content Include="engine\handler\collision\ICollisionCallback.java" />
+    <Compile Include="engine\handler\runnable\RunnableHandler.cs" />
+    <Compile Include="engine\handler\timer\ITimerCallback.cs" />
+    <Compile Include="engine\handler\timer\TimerHandler.cs" />
     <Content Include="engine\LimitedFPSEngine.java" />
     <Compile Include="engine\options\EngineOptions.cs" />
     <Compile Include="engine\options\RenderOptions.cs" />
@@ -79,7 +91,7 @@
     <Content Include="entity\layer\BaseLayer.java" />
     <Content Include="entity\layer\DynamicCapacityLayer.java" />
     <Content Include="entity\layer\FixedCapacityLayer.java" />
-    <Content Include="entity\layer\ILayer.java" />
+    <Compile Include="entity\layer\ILayer.cs" />
     <Content Include="entity\layer\tiled\tmx\TMXLayer.java" />
     <Content Include="entity\layer\tiled\tmx\TMXLayerProperty.java" />
     <Content Include="entity\layer\tiled\tmx\TMXLoader.java" />
@@ -103,7 +115,7 @@
     <Content Include="entity\layer\tiled\tmx\util\exception\TMXParseException.java" />
     <Content Include="entity\layer\tiled\tmx\util\exception\TSXLoadException.java" />
     <Content Include="entity\layer\tiled\tmx\util\exception\TSXParseException.java" />
-    <Content Include="entity\layer\ZIndexSorter.java" />
+    <Compile Include="entity\layer\ZIndexSorter.cs" />
     <Content Include="entity\particle\emitter\BaseCircleParticleEmitter.java" />
     <Content Include="entity\particle\emitter\BaseParticleEmitter.java" />
     <Content Include="entity\particle\emitter\BaseRectangleParticleEmitter.java" />
@@ -139,10 +151,10 @@
     <Content Include="entity\primitive\Line.java" />
     <Content Include="entity\primitive\Rectangle.java" />
     <Content Include="entity\scene\background\AutoParallaxBackground.java" />
-    <Content Include="entity\scene\background\BaseBackground.java" />
-    <Content Include="entity\scene\background\ColorBackground.java" />
+    <Compile Include="entity\scene\background\BaseBackground.cs" />
+    <Compile Include="entity\scene\background\ColorBackground.cs" />
     <Content Include="entity\scene\background\EntityBackground.java" />
-    <Content Include="entity\scene\background\IBackground.java" />
+    <Compile Include="entity\scene\background\IBackground.cs" />
     <Content Include="entity\scene\background\modifier\ColorModifier.java" />
     <Content Include="entity\scene\background\modifier\IBackgroundModifier.java" />
     <Content Include="entity\scene\background\modifier\LoopBackgroundModifier.java" />
@@ -168,7 +180,7 @@
     <Content Include="entity\scene\popup\PopupScene.java" />
     <Content Include="entity\scene\popup\TextPopupScene.java" />
     <Compile Include="entity\scene\Scene.cs" />
-    <Content Include="entity\scene\SplashScene.java" />
+    <Compile Include="entity\scene\SplashScene.cs" />
     <Compile Include="entity\shape\GLShape.cs" />
     <Compile Include="entity\shape\IShape.cs" />
     <Content Include="entity\shape\modifier\AlphaModifier.java" />
@@ -197,7 +209,7 @@
     <Content Include="entity\shape\modifier\TripleValueSpanShapeModifier.java" />
     <Compile Include="entity\shape\RectangularShape.cs" />
     <Compile Include="entity\shape\Shape.cs" />
-    <Content Include="entity\shape\util\ShapeUtils.java" />
+    <Compile Include="entity\shape\util\ShapeUtils.cs" />
     <Content Include="entity\sprite\AnimatedSprite.java" />
     <Content Include="entity\sprite\BaseSprite.java" />
     <Content Include="entity\sprite\Sprite.java" />
@@ -212,9 +224,9 @@
     <Content Include="entity\util\FrameCounter.java" />
     <Content Include="entity\util\ScreenCapture.java" />
     <Content Include="entity\util\ScreenGrabber.java" />
-    <Content Include="input\touch\controller\BaseTouchController.java" />
+    <Compile Include="input\touch\controller\BaseTouchController.cs" />
     <Compile Include="input\touch\controller\ITouchController.cs" />
-    <Content Include="input\touch\controller\SingleTouchControler.java" />
+    <Compile Include="input\touch\controller\SingleTouchControler.cs" />
     <Content Include="input\touch\detector\BaseDetector.java" />
     <Content Include="input\touch\detector\ClickDetector.java" />
     <Content Include="input\touch\detector\HoldDetector.java" />
@@ -225,15 +237,15 @@
     <Content Include="level\LevelLoader.java" />
     <Content Include="level\LevelParser.java" />
     <Content Include="level\util\constants\LevelConstants.java" />
-    <Content Include="opengl\buffer\BufferObject.java" />
-    <Content Include="opengl\buffer\BufferObjectManager.java" />
-    <Content Include="opengl\font\Font.java" />
-    <Content Include="opengl\font\FontFactory.java" />
-    <Content Include="opengl\font\FontLibrary.java" />
-    <Content Include="opengl\font\FontManager.java" />
-    <Content Include="opengl\font\Letter.java" />
-    <Content Include="opengl\font\Size.java" />
-    <Content Include="opengl\font\StrokeFont.java" />
+    <Compile Include="opengl\buffer\BufferObject.cs" />
+    <Compile Include="opengl\buffer\BufferObjectManager.cs" />
+    <Compile Include="opengl\font\Font.cs" />
+    <Compile Include="opengl\font\FontFactory.cs" />
+    <Compile Include="opengl\font\FontLibrary.cs" />
+    <Compile Include="opengl\font\FontManager.cs" />
+    <Compile Include="opengl\font\Letter.cs" />
+    <Compile Include="opengl\font\Size.cs" />
+    <Compile Include="opengl\font\StrokeFont.cs" />
     <Compile Include="opengl\IDrawable.cs" />
     <Content Include="opengl\texture\buffer\TextTextureBuffer.java" />
     <Content Include="opengl\texture\BuildableTexture.java" />
@@ -268,7 +280,7 @@
     <Content Include="opengl\vertex\LineVertexBuffer.java" />
     <Content Include="opengl\vertex\RectangleVertexBuffer.java" />
     <Content Include="opengl\vertex\TextVertexBuffer.java" />
-    <Content Include="opengl\vertex\VertexBuffer.java" />
+    <Compile Include="opengl\vertex\VertexBuffer.cs" />
     <Content Include="opengl\view\BaseConfigChooser.java" />
     <Content Include="opengl\view\ComponentSizeChooser.java" />
     <Content Include="opengl\view\EGLConfigChooser.java" />
@@ -277,17 +289,17 @@
     <Content Include="opengl\view\LogWriter.java" />
     <Content Include="opengl\view\RenderSurfaceView.java" />
     <Content Include="opengl\view\SimpleEGLConfigChooser.java" />
-    <Content Include="sensor\accelerometer\AccelerometerData.java" />
-    <Content Include="sensor\accelerometer\AccelerometerSensorOptions.java" />
-    <Content Include="sensor\accelerometer\IAccelerometerListener.java" />
-    <Content Include="sensor\BaseSensorData.java" />
+    <Compile Include="sensor\accelerometer\AccelerometerData.cs" />
+    <Compile Include="sensor\accelerometer\AccelerometerSensorOptions.cs" />
+    <Compile Include="sensor\accelerometer\IAccelerometerListener.cs" />
+    <Compile Include="sensor\BaseSensorData.cs" />
     <Content Include="sensor\location\ILocationListener.java" />
     <Content Include="sensor\location\LocationProviderStatus.java" />
     <Content Include="sensor\location\LocationSensorOptions.java" />
     <Content Include="sensor\orientation\IOrientationListener.java" />
     <Content Include="sensor\orientation\OrientationData.java" />
     <Content Include="sensor\orientation\OrientationSensorOptions.java" />
-    <Content Include="sensor\SensorDelay.java" />
+    <Compile Include="sensor\SensorDelay.cs" />
     <Content Include="ui\activity\BaseActivity.java" />
     <Content Include="ui\activity\BaseGameActivity.java" />
     <Content Include="ui\activity\BaseSplashActivity.java" />
@@ -309,7 +321,7 @@
     <Compile Include="util\Debug.cs" />
     <Content Include="util\FileUtils.java" />
     <Content Include="util\HorizontalAlign.java" />
-    <Content Include="util\IEntityMatcher.java" />
+    <Compile Include="util\IEntityMatcher.cs" />
     <Content Include="util\levelstats\LevelStatsDBConnector.java" />
     <Compile Include="util\Library.cs" />
     <Content Include="util\ListUtils.java" />
@@ -361,7 +373,7 @@
     <Content Include="util\modifier\ParallelModifier.java" />
     <Content Include="util\modifier\SequenceModifier.java" />
     <Compile Include="util\modifier\util\ModifierUtils.cs" />
-    <Content Include="util\MultiKey.java" />
+    <Compile Include="util\MultiKey.cs" />
     <Content Include="util\MultiKeyHashMap.java" />
     <Content Include="util\path\astar\AStarPathFinder.java" />
     <Content Include="util\path\astar\EuclideanHeuristic.java" />
@@ -372,24 +384,24 @@
     <Content Include="util\path\IPathFinder.java" />
     <Content Include="util\path\ITiledMap.java" />
     <Content Include="util\path\Path.java" />
-    <Content Include="util\pool\EntityRemoveRunnablePoolItem.java" />
-    <Content Include="util\pool\EntityRemoveRunnablePoolUpdateHandler.java" />
+    <Compile Include="util\pool\EntityRemoveRunnablePoolItem.cs" />
+    <Compile Include="util\pool\EntityRemoveRunnablePoolUpdateHandler.cs" />
     <Compile Include="util\pool\GenericPool.cs" />
     <Compile Include="util\pool\Pool.cs" />
     <Compile Include="util\pool\PoolItem.cs" />
-    <Content Include="util\pool\PoolUpdateHandler.java" />
-    <Content Include="util\pool\RunnablePoolItem.java" />
-    <Content Include="util\pool\RunnablePoolUpdateHandler.java" />
+    <Compile Include="util\pool\PoolUpdateHandler.cs" />
+    <Compile Include="util\pool\RunnablePoolItem.cs" />
+    <Compile Include="util\pool\RunnablePoolUpdateHandler.cs" />
     <Content Include="util\ProgressCallable.java" />
     <Content Include="util\SAXUtils.java" />
     <Compile Include="util\SimplePreferences.cs" />
     <Content Include="util\SocketUtils.java" />
-    <Content Include="util\sort\InsertionSorter.java" />
-    <Content Include="util\sort\Sorter.java" />
+    <Compile Include="util\sort\InsertionSorter.cs" />
+    <Compile Include="util\sort\Sorter.cs" />
     <Content Include="util\StreamUtils.java" />
     <Content Include="util\StringUtils.java" />
     <Content Include="util\SystemUtils.java" />
-    <Content Include="util\VerticalAlign.java" />
+    <Compile Include="util\VerticalAlign.cs" />
     <Content Include="util\ViewUtils.java" />
   </ItemGroup>
   <ItemGroup>
