:( Back to not building...
BaseActivity needs to refer to Android.OS.AsyncTask.OnPostExecute (to override and call it on the base class), and it is mentioned in the docs, but doesn't actually exist.  This may be a post to the monodroid list job (will do that now).

Then the examples project has some follow on references that are not yet complete, but a ton of references and conversion completed here that I think should be good.

--- a/andengine.net.csproj
+++ b/andengine.net.csproj
@@ -312,14 +312,14 @@
     <Compile Include="sensor\orientation\OrientationData.cs" />
     <Compile Include="sensor\orientation\OrientationSensorOptions.cs" />
     <Compile Include="sensor\SensorDelay.cs" />
-    <Content Include="ui\activity\BaseActivity.java" />
+    <Compile Include="ui\activity\BaseActivity.cs" />
     <Content Include="ui\activity\BaseGameActivity.java" />
     <Content Include="ui\activity\BaseSplashActivity.java" />
     <Content Include="ui\activity\LayoutGameActivity.java" />
     <Content Include="ui\dialog\GenericInputDialogBuilder.java" />
     <Content Include="ui\dialog\StringInputDialogBuilder.java" />
     <Content Include="ui\IGameInterface.java" />
-    <Content Include="util\AsyncCallable.java" />
+    <Compile Include="util\AsyncCallable.cs" />
     <Content Include="util\Base64.java" />
     <Content Include="util\Base64InputStream.java" />
     <Content Include="util\BetaUtils.java" />
@@ -404,8 +404,11 @@
     <Compile Include="util\pool\PoolUpdateHandler.cs" />
     <Compile Include="util\pool\RunnablePoolItem.cs" />
     <Compile Include="util\pool\RunnablePoolUpdateHandler.cs" />
-    <Content Include="util\ProgressCallable.java" />
+    <Compile Include="util\ProgressCallable.cs" />
+    <Content Include="util\progress\ProgressMonitor.java" />
     <Content Include="util\SAXUtils.java" />
+    <Compile Include="util\progress\IProgressListener.cs" />
+    <Compile Include="util\progress\ProgressCallable.cs" />
     <Compile Include="util\SimplePreferences.cs" />
     <Content Include="util\SocketUtils.java" />
     <Compile Include="util\sort\InsertionSorter.cs" />
