--- a/andengine.net.csproj
+++ b/andengine.net.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Cloneable.cs" />
     <Compile Include="engine\Engine.cs" />
+    <Compile Include="entity\primitive\Line.cs" />
+    <Compile Include="opengl\vertex\LineVertexBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoftReference.cs" />
     <Compile Include="SparseArray.cs" />
@@ -160,7 +162,6 @@
     <Content Include="entity\particle\Particle.java" />
     <Content Include="entity\particle\ParticleSystem.java" />
     <Compile Include="entity\primitive\BaseRectangle.cs" />
-    <Content Include="entity\primitive\Line.java" />
     <Content Include="entity\primitive\Rectangle.java" />
     <Content Include="entity\scene\background\AutoParallaxBackground.java" />
     <Compile Include="entity\scene\background\BaseBackground.cs" />
