--- a/andengine.net.csproj
+++ b/andengine.net.csproj
@@ -49,6 +49,8 @@
     <Compile Include="engine\Engine.cs" />
     <Compile Include="engine\options\resolutionpolicy\BaseResolutionPolicy.cs" />
     <Compile Include="engine\options\resolutionpolicy\RatioResolutionPolicy.cs" />
+    <Compile Include="entity\modifier\EntityModifierList.cs" />
+    <Compile Include="entity\modifier\IEntityModifier.cs" />
     <Compile Include="entity\primitive\Line.cs" />
     <Compile Include="entity\util\AverageFPSCounter.cs" />
     <Compile Include="entity\util\FPSCounter.cs" />
@@ -132,6 +134,29 @@
     <Content Include="entity\layer\tiled\tmx\util\exception\TSXLoadException.java" />
     <Content Include="entity\layer\tiled\tmx\util\exception\TSXParseException.java" />
     <Compile Include="entity\layer\ZIndexSorter.cs" />
+    <Content Include="entity\modifier\AlphaModifier.java" />
+    <Content Include="entity\modifier\ColorModifier.java" />
+    <Content Include="entity\modifier\DelayModifier.java" />
+    <Content Include="entity\modifier\DoubleValueSpanShapeModifier.java" />
+    <Content Include="entity\modifier\DurationShapeModifier.java" />
+    <Content Include="entity\modifier\EntityModifier.java" />
+    <Content Include="entity\modifier\FadeInModifier.java" />
+    <Content Include="entity\modifier\FadeOutModifier.java" />
+    <Content Include="entity\modifier\LoopEntityModifier.java" />
+    <Content Include="entity\modifier\MoveModifier.java" />
+    <Content Include="entity\modifier\MoveXModifier.java" />
+    <Content Include="entity\modifier\MoveYModifier.java" />
+    <Content Include="entity\modifier\ParallelEntityModifier.java" />
+    <Content Include="entity\modifier\PathModifier.java" />
+    <Content Include="entity\modifier\RotationAtModifier.java" />
+    <Content Include="entity\modifier\RotationByModifier.java" />
+    <Content Include="entity\modifier\RotationModifier.java" />
+    <Content Include="entity\modifier\ScaleAtModifier.java" />
+    <Content Include="entity\modifier\ScaleModifier.java" />
+    <Content Include="entity\modifier\SequenceEntityModifier.java" />
+    <Content Include="entity\modifier\SingleValueChangeShapeModifier.java" />
+    <Content Include="entity\modifier\SingleValueSpanShapeModifier.java" />
+    <Content Include="entity\modifier\TripleValueSpanShapeModifier.java" />
     <Content Include="entity\particle\emitter\BaseCircleParticleEmitter.java" />
     <Content Include="entity\particle\emitter\BaseParticleEmitter.java" />
     <Content Include="entity\particle\emitter\BaseRectangleParticleEmitter.java" />
@@ -320,6 +345,7 @@
     <Content Include="ui\dialog\StringInputDialogBuilder.java" />
     <Compile Include="ui\IGameInterface.cs" />
     <Compile Include="util\AsyncCallable.cs" />
+    <Content Include="util\ActivityUtils.java" />
     <Content Include="util\Base64.java" />
     <Content Include="util\Base64InputStream.java" />
     <Content Include="util\BetaUtils.java" />
@@ -331,10 +357,12 @@
     <Compile Include="util\constants\MathConstants.cs" />
     <Compile Include="util\constants\TimeConstants.cs" />
     <Compile Include="util\Debug.cs" />
+    <Content Include="util\DataUtils.java" />
     <Content Include="util\FileUtils.java" />
     <Content Include="util\HorizontalAlign.java" />
     <Compile Include="util\IEntityMatcher.cs" />
     <Content Include="util\levelstats\LevelStatsDBConnector.java" />
+    <Compile Include="util\IMatcher.cs" />
     <Compile Include="util\Library.cs" />
     <Content Include="util\ListUtils.java" />
     <Compile Include="util\MathUtils.cs" />
@@ -396,6 +424,7 @@
     <Content Include="util\path\IPathFinder.java" />
     <Content Include="util\path\ITiledMap.java" />
     <Content Include="util\path\Path.java" />
+    <Compile Include="util\ParameterCallable.cs" />
     <Compile Include="util\pool\EntityRemoveRunnablePoolItem.cs" />
     <Compile Include="util\pool\EntityRemoveRunnablePoolUpdateHandler.cs" />
     <Compile Include="util\pool\GenericPool.cs" />
@@ -411,12 +440,15 @@
     <Compile Include="util\progress\ProgressCallable.cs" />
     <Compile Include="util\SimplePreferences.cs" />
     <Content Include="util\SocketUtils.java" />
+    <Compile Include="util\SmartList.cs" />
     <Compile Include="util\sort\InsertionSorter.cs" />
     <Compile Include="util\sort\Sorter.cs" />
     <Compile Include="util\StreamUtils.cs" />
     <Content Include="util\StringUtils.java" />
     <Content Include="util\SystemUtils.java" />
     <Compile Include="util\VerticalAlign.cs" />
+    <Content Include="util\Transformation.java" />
+    <Content Include="util\TransformationPool.java" />
     <Content Include="util\ViewUtils.java" />
   </ItemGroup>
   <ItemGroup>
