--- a/andengine.net.csproj
+++ b/andengine.net.csproj
@@ -337,8 +337,10 @@
     <Compile Include="sensor\orientation\OrientationData.cs" />
     <Compile Include="sensor\orientation\OrientationSensorOptions.cs" />
     <Compile Include="sensor\SensorDelay.cs" />
+    <None Include="ui\activity\BaseActivity.cs.old" />
     <Compile Include="ui\activity\BaseActivity.cs" />
     <Compile Include="ui\activity\BaseGameActivity.cs" />
+    <Content Include="ui\activity\BaseActivity.java" />
     <Content Include="ui\activity\BaseSplashActivity.java" />
     <Content Include="ui\activity\LayoutGameActivity.java" />
     <Content Include="ui\dialog\GenericInputDialogBuilder.java" />
